--- a/server/trunk/web/root/static/sophie.css
+++ b/server/trunk/web/root/static/sophie.css
@@ -86,6 +86,11 @@ div#sophie_header {
     font-size: 0.9em;
 }
 
+div#sophie_search_form {
+    padding-top: 1em;
+    padding-left: 0.2em;
+}
+
 div.sophie_package_list {
     float:right;
     border: none;
@@ -93,27 +98,8 @@ div.sophie_package_list {
     padding-left: 0.5em;
     padding-top: 0.2em;
     background: #f3f47a;
-    margin-top: 2em;
-}
-
-div.sophie_search_list {
-    border: none;
-    padding-left: 0.5em;
-    padding-top: 0.2em;
-    background: #f3f47a;
-    margin-top: 2em;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.sophie_help h2 {
-    font-size: 1.2em;
-/*    margin-top: 5em;*/
-    background-color: #EFF3F7;
-}
-
-.sophie_help code {
-    background-color: #FFFFC0;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 .sophie_package_list h2 {
@@ -128,6 +114,49 @@ div.sophie_search_list {
     padding-bottom: 0em;
     margin: 0em;
     margin-bottom: 0.2em;
+}
+
+div.sophie_search_list {
+    border: none;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    background: #f3f47a;
+    margin-top: 1em;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.sophie_search_list h2 {
+    margin-top: 0em;
+    margin-bottom: 0.5em;
+}
+
+.sophie_search_list p {
+    padding-left: 2em;
+    padding-right: 0em;
+    padding-top: 0em;
+    padding-bottom: 0em;
+    margin: 0em;
+    margin-bottom: 0.2em;
+}
+
+.sophie_search_list ul {
+    padding-left: 4em;
+    padding-right: 0em;
+    padding-top: 0.2em;
+    padding-bottom: 0em;
+    margin: 0em;
+    margin-bottom: 0.2em;
+}
+
+.sophie_help h2 {
+    font-size: 1.2em;
+/*    margin-top: 5em;*/
+    background-color: #EFF3F7;
+}
+
+.sophie_help code {
+    background-color: #FFFFC0;
 }
 
 ul.sophie_tag {
