--- a/server/trunk/web/root/templates/html/search/index.tt
+++ b/server/trunk/web/root/templates/html/search/index.tt
@@ -1,7 +1,9 @@
 <!-- $Id$ -->
+<div Id="sophie_search_form">
 <form action="[% c.uri_for('/search') %]" method="POST" id="sophie_adv_search">
 [% INCLUDE 'search/adv_search.tt' %]
 </form>
+</div>
 [%# c.prototype.observe_form('sophie_adv_search',
     {
         url => c.uri_for('/search/adv_search', { ajax => 1 }),
