--- a/server/trunk/web/root/templates/html/distrib/media_list_rpms.html
+++ b/server/trunk/web/root/templates/html/distrib/media_list_rpms.html
@@ -1,3 +1,8 @@
 <!-- $Id$ -->
-
+<div Id="body_main">
 [% INCLUDE 'distrib/media_list_rpms.tt' %]
+</div>
+
+<div Id="body_additional">
+<p> Slurp !</p>
+</div>
