--- a/server/trunk/web/root/templates/html/distrib/media_list_rpms.tt
+++ b/server/trunk/web/root/templates/html/distrib/media_list_rpms.tt
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 [% FOREACH rpm = xmlrpc %]
 [% IF loop.first %]
-<ul>
+<ul class="sophie_tag" >
 [% END %]
 <li>
     <a href="[% c.uri_for('/', c.req.path, 'by-pkgid', rpm.pkgid) %]">[% rpm.filename | html %]</a>
