--- a/server/trunk/web/root/templates/html/help/index.html
+++ b/server/trunk/web/root/templates/html/help/index.html
@@ -1,3 +1,4 @@
 <!-- $Id$ -->
+<p><a href="[% c.uri_for('/help', 'urls') %]">Supported Urls</a></p>
 <p><a href="[% c.uri_for('/help', 'xmlrpc') %]">XML::RPC functions doc</a></p>
 <p><a href="[% c.uri_for('/help', 'chat') %]">Bot help</a></p>
