--- a/server/trunk/web/root/templates/html/distrib/list_release.tt
+++ b/server/trunk/web/root/templates/html/distrib/list_release.tt
@@ -3,7 +3,7 @@
 [% IF loop.first %]
 <ol>
 [% END %]
-<li><a href="[% c.uri_for('/', c.req.path, release) %]">[% release | html %]</a></li>
+<li><a href="[% c.uri_for('/', c.req.path, release) %]">[% release | html %]</a>
 [% FOREACH arch = c.forward('/distrib/list', [ 
     {
         'distribution' => dist.distribution,
@@ -20,6 +20,7 @@
 </ul>
 [% END %]
 [% END %]
+</li>
 [% IF loop.last %]
 </ol>
 [% END %]
