--- a/server/trunk/web/root/templates/html/explorer/index.html
+++ b/server/trunk/web/root/templates/html/explorer/index.html
@@ -13,7 +13,7 @@
     }
 ) %]
 
-<div style="float: left; border: outset; width: 30%">
+<div id="sophie_explorer_form">
 <form action="#" method="POST">
     Filter to file starting by: 
     <input type="text" id="explorer_filter" name="filename">
@@ -37,7 +37,7 @@
     Loading...
 </div>
 </div>
-<div id="exp_file" style="float: left; border: outset; width: 60%">
+<div id="exp_file">
     Loading...
 </div>
 
