--- a/server/trunk/web/root/templates/includes/footer.tt
+++ b/server/trunk/web/root/templates/includes/footer.tt
@@ -7,6 +7,11 @@
 <a href="http://catalyst.perl.org/"><img height="64" src="[% c.uri_for('/static/images', 'catalyst.png') -%]" alt="Catalyst"></a> ::
 <a href="http://www.postgresql.org/"><img height="64" width="64" src="[% c.uri_for('/static/images', 'postgresql.png') -%]" alt="PostgreSQL"></a> ::
 <a href="http://www.rpm.org/"><img height="64" width="64" src="[% c.uri_for('/static/images', 'rpmlogo.png') -%]" alt="RPM"></a>
+<span id="w3c">
+<a href="http://validator.w3.org/check?uri=referer">
+    <img src="http://www.w3.org/Icons/valid-xhtml10"
+    alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+</span>
 </p>
 </div>
 </body>
