--- a/server/trunk/web/root/templates/includes/footer.tt
+++ b/server/trunk/web/root/templates/includes/footer.tt
@@ -10,7 +10,7 @@
 <span id="w3c">
 <a href="http://validator.w3.org/check?uri=referer">
     <img src="http://www.w3.org/Icons/valid-xhtml10"
-    alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
+    alt="Valid XHTML 1.0 Strict" height="31" width="88"></a>
 </span>
 </p>
 </div>
