--- a/server/trunk/web/root/templates/html/search/results.tt
+++ b/server/trunk/web/root/templates/html/search/results.tt
@@ -3,23 +3,40 @@
 [% USE 'GuessEncode' %]
 [% USE 'ObfuscateMail' %]
 
-<p>
+[% IF pager %]
+<p class="result_pager">
 [% IF pager.current_page != pager.first_page %]
-<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.first_page }) %]">First</a> 
-[% END %]
+<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.first_page }) %]">
+<img 
+  src="[% c.uri_for('/static', 'images', 'arrow-left-double.png') %]"
+  alt="First">
+</a>
 [% IF pager.previous_page != pager.first_page %]
-<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.previous_page }) %]">[%
-pager.previous_page %]</a> 
+<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.previous_page }) %]">
+<img 
+  src="[% c.uri_for('/static', 'images', 'arrow-left.png') %]"
+  alt="Prev">
+</a> 
 [% END %]
-[% pager.current_page %] / [% pager.last_page %]
-[% IF pager.next_page != pager.last_page %]
-<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.next_page }) %]">[%
-pager.next_page %]</a> 
 [% END %]
+Page [% pager.current_page %] / [% pager.last_page %]
 [% IF pager.current_page != pager.last_page %]
-<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.last_page }) %]">Last</a> 
+[% IF pager.next_page != pager.last_page %]
+<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.next_page }) %]">
+<img 
+  src="[% c.uri_for('/static', 'images', 'arrow-right.png') %]"
+  alt="Next">
+</a> 
+[% END %]
+<a href="[% c.uri_for('/', c.req.path, { 'page' => pager.last_page }) %]">
+<img 
+  src="[% c.uri_for('/static', 'images', 'arrow-right-double.png') %]"
+  alt="Last">
+</a> 
+</a> 
 [% END %]
 </p>
+[% END %]
 
 [% FOREACH pkgid = xmlrpc.results %]
 [% info = c.forward('/rpms/info', [ pkgid ]) %]
