--- a/server/trunk/web/root/templates/includes/header.tt
+++ b/server/trunk/web/root/templates/includes/header.tt
@@ -28,6 +28,7 @@
         <li><a href="[% c.uri_for('/distrib') %]">Distribution</a></li>
         <li><a href="[% c.uri_for('/explorer') %]">Explorer</a></li>
         <li><a href="[% c.uri_for('/sources') %]">Source & Patches</a></li>
+        <li><a href="[% c.uri_for('/chat') %]">Chat</a></li>
         <li><a href="[% c.uri_for('/help') %]">Help</a></li>
         </ul>
     </div>
