- show other rpm with same name

--- a/server/trunk/web/root/templates/html/rpms/location.html
+++ b/server/trunk/web/root/templates/html/rpms/location.html
@@ -2,4 +2,13 @@
 
 [% INCLUDE 'rpms/menu.tt' %]
 
-[% INCLUDE 'rpms/location.tt' %]
+
+<div id="body_main">
+    [% INCLUDE 'rpms/location.tt' %]
+</div>
+
+<div id="body_additional">
+    [% INCLUDE 'rpms/related.tt' %]
+</div>
+
+
