- add rpms/analyse function

--- a/server/trunk/web/root/templates/html/rpms/menu.tt
+++ b/server/trunk/web/root/templates/html/rpms/menu.tt
@@ -5,4 +5,5 @@
 <li><a href="[% c.uri_for('/', rpmurl, 'files') %]">Files</a></li>
 <li><a href="[% c.uri_for('/', rpmurl, 'changelog') %]">ChangeLog</a></li>
 <li><a href="[% c.uri_for('/', rpmurl, 'location') %]">Location</a></li>
+<li><a href="[% c.uri_for('/', rpmurl, 'analyse') %]">Analyse</a></li>
 </ul>
