- add the name of rpm on rpms pages

--- a/server/trunk/web/root/templates/html/rpms/menu.tt
+++ b/server/trunk/web/root/templates/html/rpms/menu.tt
@@ -1,4 +1,7 @@
 <!-- $Id$ -->
+
+<h2>[% rpms.info.filename | html %]</h2>
+
 <ul id="sophie_rpms_menu" class="flat_menu">
 <li><a href="[% c.uri_for('/', rpmurl) %]">Info</a></li>
 <li><a href="[% c.uri_for('/', rpmurl, 'deps') %]">Deps</a></li>
