--- a/server/trunk/web/root/templates/html/index.tt
+++ b/server/trunk/web/root/templates/html/index.tt
@@ -17,7 +17,7 @@ distributions.</p>
 <p>This website can now be used in various way, see <a href="[%
 c.uri_for('/help') %]">the help page</a>.</p>
 
-<p>Send bug bug report, request and comment to <b>nanardon at nanardon dot zarb dot
+<p>Send bug report, request and comment to <b>nanardon at nanardon dot zarb dot
 org</b>.</p>
 
 <p>Thanks to all boys and girl who helped me to make this working.</p>
