--- a/server/trunk/web/root/templates/html/search/simple_search.tt
+++ b/server/trunk/web/root/templates/html/search/simple_search.tt
@@ -1,5 +1,5 @@
 <!-- $Id$ -->
-<div id="sophie_search">
+<div id="sophie_header_search">
     <form action="[% c.uri_for('/search/results') %]">
         <input type="text" name="search" value="[% c.req.param('search') %]">
         <input type="submit">
