--- a/server/trunk/web/root/static/sophie.css
+++ b/server/trunk/web/root/static/sophie.css
@@ -12,6 +12,10 @@ body {
   background-color: #FFFFFF;
 }
 
+div#distribselect {
+    padding-bottom: 0.2em;
+}
+
 /* header look */
 div#sophie_header {
   border: none;
@@ -20,6 +24,10 @@ div#sophie_header {
 
 #sophie_header a:visited {
   color: #F7A800;
+}
+
+div#sophie_header img {
+  float: left;
 }
 
 span#sophie_login {
@@ -47,11 +55,73 @@ div#sophie_header_search {
 }
 
 /* foot look */
-.sophie_footer img {
+div.sophie_footer img {
   color: #FFFFFF;
   vertical-align: middle;
 }
 
+div.sophie_footer p {
+  text-align: center;
+}
+
+/* home look */
+div#body_home {
+    float:left;
+    font-size: 1.2em;
+    padding: 0.5em;
+    width: 45%;
+    overflow: hidden;
+}
+
+/* search look */
+div#sophie_search_form {
+    padding-top: 1em;
+    padding-left: 0.2em;
+}
+
+.sophie_search_result_pager {
+    text-align: center;
+}
+
+.sophie_search_result_pager img {
+    color: #FFFFFF;
+    vertical-align: middle;
+}
+
+div.sophie_search_list {
+    border: none;
+    padding-left: 0.5em;
+    padding-top: 0.2em;
+    background: #f3f47a;
+    margin-top: 1em;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.sophie_search_list h2 {
+    margin-top: 0em;
+    margin-bottom: 0.5em;
+}
+
+.sophie_search_list p {
+    padding-left: 2em;
+    padding-right: 0em;
+    padding-top: 0em;
+    padding-bottom: 0em;
+    margin: 0em;
+    margin-bottom: 0.2em;
+}
+
+.sophie_search_list ul {
+    padding-left: 4em;
+    padding-right: 0em;
+    padding-top: 0.2em;
+    padding-bottom: 0em;
+    margin: 0em;
+    margin-bottom: 0.2em;
+}
+
+/* Tout ce qui reste */
 .flat_menu li {
     font-size: 1.2em;
     font-weight: bold;
@@ -64,13 +134,6 @@ div#sophie_header_search {
 }
 
 /* body_home : Id for home part of index.html */
-div#body_home {
-    float:left;
-    font-size: 1.2em;
-    padding: 0.5em;
-    width: 45%;
-    overflow: hidden;
-}
 
 div#body_main {
     float:left;
@@ -109,25 +172,11 @@ div#body_additional {
     font-size: 0.9em;
 }
 
-div#sophie_search_form {
-    padding-top: 1em;
-    padding-left: 0.2em;
-}
-
 div#sophie_chat {
     float: left;
     width: 35%;
     padding-top: 1em;
     padding-left: 0.2em;
-}
-
-.result_pager {
-    text-align: center;
-}
-
-.result_pager img {
-    color: #FFFFFF;
-    vertical-align: middle;
 }
 
 div.sophie_package_list {
@@ -150,39 +199,6 @@ div.sophie_package_list {
     padding-left: 2em;
     padding-right: 0em;
     padding-top: 0em;
-    padding-bottom: 0em;
-    margin: 0em;
-    margin-bottom: 0.2em;
-}
-
-div.sophie_search_list {
-    border: none;
-    padding-left: 0.5em;
-    padding-top: 0.2em;
-    background: #f3f47a;
-    margin-top: 1em;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-
-.sophie_search_list h2 {
-    margin-top: 0em;
-    margin-bottom: 0.5em;
-}
-
-.sophie_search_list p {
-    padding-left: 2em;
-    padding-right: 0em;
-    padding-top: 0em;
-    padding-bottom: 0em;
-    margin: 0em;
-    margin-bottom: 0.2em;
-}
-
-.sophie_search_list ul {
-    padding-left: 4em;
-    padding-right: 0em;
-    padding-top: 0.2em;
     padding-bottom: 0em;
     margin: 0em;
     margin-bottom: 0.2em;
@@ -234,10 +250,6 @@ div#sophie_bot_help {
     padding: 1em;
     float: left;
     width: 50%;
-}
-
-div#distribselect {
-    padding-bottom: 0.2em;
 }
 
 .sophie_help h2 {
