--- a/server/trunk/web/root/templates/html/explorer/index.html
+++ b/server/trunk/web/root/templates/html/explorer/index.html
@@ -13,7 +13,7 @@
     }
 ) %]
 
-<div id="sophie_explorer_form">
+<div id="explorer_form">
 <form action="#" method="POST">
     Filter to file starting by: 
     <input type="text" id="explorer_filter" name="filename">
@@ -33,7 +33,7 @@
 ) %]
 <hr>
 
-<div id="exp_dir" style="">
+<div id="exp_dir">
     Loading...
 </div>
 </div>
