--- a/server/trunk/web/root/templates/html/rpms/analyse.html
+++ b/server/trunk/web/root/templates/html/rpms/analyse.html
@@ -18,7 +18,7 @@
     <input type="submit" name="analyse">
 </form>
 
-<div id="body_main">
+<div id="sophie_body_main">
     [% INCLUDE 'rpms/analyse.tt' %]
 </div>
 
