--- a/server/trunk/web/root/templates/html/rpms/rpms.html
+++ b/server/trunk/web/root/templates/html/rpms/rpms.html
@@ -2,11 +2,11 @@
 
 [% INCLUDE 'rpms/menu.tt' %]
 
-<div id="body_main">
+<div id="sophie_body_main">
 
     [% INCLUDE 'rpms/rpms.tt' %]
 </div>
 
-<div id="body_additional">
+<div id="sophie_body_additional">
     [% INCLUDE 'rpms/related.tt' %]
 </div>
