--- a/server/trunk/web/root/templates/html/rpms/location.html
+++ b/server/trunk/web/root/templates/html/rpms/location.html
@@ -3,11 +3,11 @@
 [% INCLUDE 'rpms/menu.tt' %]
 
 
-<div id="body_main">
+<div id="sophie_body_main">
     [% INCLUDE 'rpms/location.tt' %]
 </div>
 
-<div id="body_additional">
+<div id="sophie_body_additional">
     [% INCLUDE 'rpms/related.tt' %]
 </div>
 
