- add notice about some url don't support everything

--- a/server/trunk/web/root/templates/html/help/urls/index.html
+++ b/server/trunk/web/root/templates/html/help/urls/index.html
@@ -40,6 +40,8 @@ or <code>GET</code>:
 </pre>
 </p>
 
+<p><b>NB:</b> Some URL don't support (yet) all output type.</p>
+
 <h1>Urls:</h1>
 
 [% c.model('Help::POD').urls_functions %]
