--- a/server/trunk/web/root/templates/html/explorer/index.html
+++ b/server/trunk/web/root/templates/html/explorer/index.html
@@ -1,17 +1,10 @@
 <!-- $Id$ -->
 <form action="[% c.uri_for('/', c.req.path) %]" id="explorer_d" method="POST">
     <span id="distribselect">
-    [% INCLUDE 'ajax/forms/distribselect.tt' %]
+    [% INCLUDE 'ajax/forms/distribselect.tt' form = 'explorer_d' %]
     </span>
     <input type="submit" value="Update view...">
 </form>
-[% c.prototype.observe_form('explorer_d',
-    {
-    url => c.uri_for('/ajax/forms/distribselect', { 'ajax' => 1 }),
-    frequency => 2,
-    update => 'distribselect',
-    }
-) %]
 
 <div id="explorer_form">
 <form action="#" method="POST">
