--- a/server/trunk/web/root/templates/html/rpms/analyse.html
+++ b/server/trunk/web/root/templates/html/rpms/analyse.html
@@ -6,15 +6,8 @@
 
 <form id="analysis_form" action="[% c.uri_for('/', c.req.path) %]" method="POST">
     <span id="distribselect">
-    [% INCLUDE 'ajax/forms/distribselect.tt' %]
+    [% INCLUDE 'ajax/forms/distribselect.tt' form = 'analysis_form' %]
     </span>
-    [% c.prototype.observe_form('analysis_form',
-    {
-        url => c.uri_for('/ajax/forms/distribselect', { 'ajax' => 1 }),
-        frequency => 2,
-        update => 'distribselect',
-    }
-    ) %] 
     <input type="submit" name="analyse">
 </form>
 
