--- a/server/trunk/web/root/templates/html/search/adv_search.tt
+++ b/server/trunk/web/root/templates/html/search/adv_search.tt
@@ -10,16 +10,8 @@
     <td></td>
     <td>
     <span id="distribselect">
-    [% INCLUDE 'ajax/forms/distribselect.tt' %]
+    [% INCLUDE 'ajax/forms/distribselect.tt' form = 'sophie_adv_search' %]
     </span>
-    [% c.prototype.observe_form('sophie_adv_search',
-            {
-            url => c.uri_for('/ajax/forms/distribselect', {
-                'ajax' => 1 }),
-            frequency => 2,
-            update => 'distribselect',
-            }
-            ) %]
     </td>
 </tr>
 <tr>
