- delete old paste (when new one is request) - paste title is the command line

--- a/server/trunk/web/root/templates/html/chat/viewpaste.tt
+++ b/server/trunk/web/root/templates/html/chat/viewpaste.tt
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 
-<p>[% xmlrpc.title %]</p>
+<p>[% xmlrpc.title %] (the [% xmlrpc.whenpaste %])</p>
 
 <pre class="filedata">
 [% xmlrpc.reply | html %]
